ensure all row overflow is rotated off during bubble

--- a/src/components/Chat/EmoteMenu.scss
+++ b/src/components/Chat/EmoteMenu.scss
@@ -60,10 +60,7 @@
 
       &--emote {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 8px;
-        justify-content: center;
+        flex-direction: column;
 
         @at-root .emote_menu--search & {
           justify-content: left;
@@ -72,7 +69,6 @@
     }
 
     &__list_row {
-      flex: 1;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
